No coverage for ChatUI class

--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
 		<h1>Pubkey.Chat</h1>
 		<i>You're already logged in!</i>
 		<h2>Download the client</h2>
-		It's just <a href="https://raw.githubusercontent.com/robertdfrench/pubkey.chat/trunk/pubkey.chat?token=GHSAT0AAAAAACJCRZEVMOXPLZETI3K6OYGYZV5SS7A">one python file</a>!
+		It's just <a href="https://raw.githubusercontent.com/robertdfrench/pubkey.chat/trunk/pubkey.chat">one python file</a>!
 		<h2>Start Chatting</h2>
 		If you want to chat about number theory, join the
 		<b>#number-theory</b> channel:
