Add social media preview image

--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Pubkey.Chat</h1>
 		<i>You're already logged in!</i>
+		<img src="social_media_preview.jpg" />
 		<h2>Download the client</h2>
 		It's just <a href="https://raw.githubusercontent.com/robertdfrench/pubkey.chat/trunk/pubkey.chat">one python file</a>!
 		<h2>Start Chatting</h2>
